# Simple_Generic_IO

./: .gitignore  CMakeLists.txt  README.md  Sum.c  Sum.h  SysArr.h  SysIO.h  SysIOImpl.c  main.c
.github/workflows/: c-cpp.yml
